﻿dotNetRDF
=========

A Library for RDF manipulation and parsing in .Net using C# 3.0

Robert Vesse 2009-10
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.3.0 release of dotNetRDF

Added
- New RdfXmlWriter which is a streaming writer based on FastRdfXmlWriter
- New Writing.Formatting namespaces
 - Introduces ITripleFormatter, INodeFormatter, IUriFormatter and ICharFormatter interfaces
 - Provides an easy to use and reusable means of formatting nodes and triples
 - Refactored existing code to use formatters for writing
- New Parsing.Validation namespace
 - Provides simple classes for validating syntax
- Silverlight Compatability
 - Emulated HtmlTextWriter and HttpUtility for Silverlight compatability
 - Variety of compiler symbols defined to allow various library features to be disabled
 - SparqlXmlParser uses XmlTextReader when no XML DOM API available


Changed
- Bug Fixes
 - SqlTripleStore initialises correctly and persists updates correctly when used with an ISparqlUpdateProcessor
 - More intelligent parsing of Blank Node IDs from SPARQL Results
 - TriG Writer outputs all required @prefix definitions and generates consistent QNames
 - URI Loader Cache handles File IO errors gracefully
- General Improvements
 - INamespaceMapper interface extracted and some visibility changes to NamespaceMapper methods



Removed
- Obsolete RdfXmlWriter removed

   



